// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaleTemplate renders correctly in error state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex flex-col gap-3 py-5"
  >
    <h2
      class="text-mb-xl tracking-2 lg:text-dk-xl font-sans"
    >
      Sales List
    </h2>
    <section>
      <div
        class="grid grid-cols-1 gap-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-4 rounded-lg border py-4 shadow-sm"
          data-slot="card"
        >
          <div
            class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex flex-row items-center gap-2"
            data-slot="card-header"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full size-9"
              data-slot="avatar"
              data-testid="avatar"
            >
              <span
                class="bg-muted flex size-full items-center justify-center rounded-full"
                data-slot="avatar-fallback"
              >
                JD
              </span>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <div
                class="leading-none font-semibold"
                data-slot="card-title"
              >
                John Doe
              </div>
              <div
                class="text-muted-foreground text-sm"
                data-slot="card-description"
              >
                Sales Representative
              </div>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
            data-orientation="horizontal"
            data-slot="separator-root"
            role="none"
          />
          <div
            class="px-4 flex flex-col gap-3"
            data-slot="card-content"
          >
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Region
              </p>
              <p
                class="text-mb-sm tracking-2 lg:text-dk-sm font-sans font-medium"
              >
                North America
              </p>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Skills
              </p>
              <div
                class="flex flex-wrap gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Negotiation
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Product Knowledge
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Clients
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rh»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rg»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rg»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rh»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rj»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«ri»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«ri»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rj»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Deals
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rl»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rk»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rk»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rl»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rn»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rm»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rm»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rn»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      class="fixed right-4 bottom-5 left-4"
    >
      <div
        class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex justify-end"
      >
        <a
          class="focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive inline-flex shrink-0 cursor-pointer items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:cursor-default disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 border shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 w-fit"
          data-slot="button"
          href="/ai"
        >
          <svg
            class="lucide lucide-message-square-code h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 7.5 8 10l2 2.5"
            />
            <path
              d="m14 7.5 2 2.5-2 2.5"
            />
            <path
              d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
            />
          </svg>
          Use AI
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SaleTemplate renders correctly in initial state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex flex-col gap-3 py-5"
  >
    <h2
      class="text-mb-xl tracking-2 lg:text-dk-xl font-sans"
    >
      Sales List
    </h2>
    <section>
      <div
        class="grid grid-cols-1 gap-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-4 rounded-lg border py-4 shadow-sm"
          data-slot="card"
        >
          <div
            class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex flex-row items-center gap-2"
            data-slot="card-header"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full size-9"
              data-slot="avatar"
              data-testid="avatar"
            >
              <span
                class="bg-muted flex size-full items-center justify-center rounded-full"
                data-slot="avatar-fallback"
              >
                JD
              </span>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <div
                class="leading-none font-semibold"
                data-slot="card-title"
              >
                John Doe
              </div>
              <div
                class="text-muted-foreground text-sm"
                data-slot="card-description"
              >
                Sales Representative
              </div>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
            data-orientation="horizontal"
            data-slot="separator-root"
            role="none"
          />
          <div
            class="px-4 flex flex-col gap-3"
            data-slot="card-content"
          >
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Region
              </p>
              <p
                class="text-mb-sm tracking-2 lg:text-dk-sm font-sans font-medium"
              >
                North America
              </p>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Skills
              </p>
              <div
                class="flex flex-wrap gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Negotiation
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Product Knowledge
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Clients
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«r1»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«r0»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«r0»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«r1»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«r3»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«r2»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«r2»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«r3»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Deals
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«r5»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«r4»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«r4»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«r5»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«r7»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«r6»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«r6»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«r7»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      class="fixed right-4 bottom-5 left-4"
    >
      <div
        class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex justify-end"
      >
        <a
          class="focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive inline-flex shrink-0 cursor-pointer items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:cursor-default disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 border shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 w-fit"
          data-slot="button"
          href="/ai"
        >
          <svg
            class="lucide lucide-message-square-code h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 7.5 8 10l2 2.5"
            />
            <path
              d="m14 7.5 2 2.5-2 2.5"
            />
            <path
              d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
            />
          </svg>
          Use AI
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SaleTemplate renders correctly in loading state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex flex-col gap-3 py-5"
  >
    <h2
      class="text-mb-xl tracking-2 lg:text-dk-xl font-sans"
    >
      Sales List
    </h2>
    <section>
      <div
        class="grid grid-cols-1 gap-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-4 rounded-lg border py-4 shadow-sm"
          data-slot="card"
        >
          <div
            class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex flex-row items-center gap-2"
            data-slot="card-header"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full size-9"
              data-slot="avatar"
              data-testid="avatar"
            >
              <span
                class="bg-muted flex size-full items-center justify-center rounded-full"
                data-slot="avatar-fallback"
              >
                JD
              </span>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <div
                class="leading-none font-semibold"
                data-slot="card-title"
              >
                John Doe
              </div>
              <div
                class="text-muted-foreground text-sm"
                data-slot="card-description"
              >
                Sales Representative
              </div>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
            data-orientation="horizontal"
            data-slot="separator-root"
            role="none"
          />
          <div
            class="px-4 flex flex-col gap-3"
            data-slot="card-content"
          >
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Region
              </p>
              <p
                class="text-mb-sm tracking-2 lg:text-dk-sm font-sans font-medium"
              >
                North America
              </p>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Skills
              </p>
              <div
                class="flex flex-wrap gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Negotiation
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Product Knowledge
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Clients
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«r9»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«r8»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«r8»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«r9»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rb»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«ra»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«ra»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rb»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Deals
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rd»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rc»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rc»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rd»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rf»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«re»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«re»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rf»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      class="fixed right-4 bottom-5 left-4"
    >
      <div
        class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex justify-end"
      >
        <a
          class="focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive inline-flex shrink-0 cursor-pointer items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:cursor-default disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 border shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 w-fit"
          data-slot="button"
          href="/ai"
        >
          <svg
            class="lucide lucide-message-square-code h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 7.5 8 10l2 2.5"
            />
            <path
              d="m14 7.5 2 2.5-2 2.5"
            />
            <path
              d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
            />
          </svg>
          Use AI
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SaleTemplate renders correctly with empty data 1`] = `
<DocumentFragment>
  <div
    class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex flex-col gap-3 py-5"
  >
    <h2
      class="text-mb-xl tracking-2 lg:text-dk-xl font-sans"
    >
      Sales List
    </h2>
    <section>
      <div
        class="grid grid-cols-1 gap-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-4 rounded-lg border py-4 shadow-sm"
          data-slot="card"
        >
          <div
            class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex flex-row items-center gap-2"
            data-slot="card-header"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full size-9"
              data-slot="avatar"
              data-testid="avatar"
            >
              <span
                class="bg-muted flex size-full items-center justify-center rounded-full"
                data-slot="avatar-fallback"
              >
                JD
              </span>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <div
                class="leading-none font-semibold"
                data-slot="card-title"
              >
                John Doe
              </div>
              <div
                class="text-muted-foreground text-sm"
                data-slot="card-description"
              >
                Sales Representative
              </div>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
            data-orientation="horizontal"
            data-slot="separator-root"
            role="none"
          />
          <div
            class="px-4 flex flex-col gap-3"
            data-slot="card-content"
          >
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Region
              </p>
              <p
                class="text-mb-sm tracking-2 lg:text-dk-sm font-sans font-medium"
              >
                North America
              </p>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Skills
              </p>
              <div
                class="flex flex-wrap gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Negotiation
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                  data-slot="badge"
                >
                  Product Knowledge
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Clients
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rp»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«ro»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«ro»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rp»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rr»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rq»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rq»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rr»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-0"
            >
              <p
                class="!text-mb-xs tracking-1 lg:text-dk-xs font-sans font-normal text-neutral-500"
              >
                Deals
              </p>
              <div
                data-orientation="vertical"
                data-slot="accordion"
              >
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rt»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«rs»"
                      type="button"
                    >
                      Acme Corp
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«rs»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rt»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
                <div
                  class="border-b last:border-b-0"
                  data-orientation="vertical"
                  data-slot="accordion-item"
                  data-state="closed"
                >
                  <h3
                    class="flex"
                    data-orientation="vertical"
                    data-state="closed"
                  >
                    <button
                      aria-controls="radix-«rv»"
                      aria-expanded="false"
                      class="focus-visible:border-ring focus-visible:ring-ring/50 text-dk-sm flex flex-1 cursor-pointer items-start justify-between gap-4 rounded-md py-2 text-left font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180"
                      data-orientation="vertical"
                      data-radix-collection-item=""
                      data-slot="accordion-trigger"
                      data-state="closed"
                      id="radix-«ru»"
                      type="button"
                    >
                      Tech Inc
                      <svg
                        class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    aria-labelledby="radix-«ru»"
                    class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                    data-orientation="vertical"
                    data-slot="accordion-content"
                    data-state="closed"
                    hidden=""
                    id="radix-«rv»"
                    role="region"
                    style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      class="fixed right-4 bottom-5 left-4"
    >
      <div
        class="mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] md:px-0 flex justify-end"
      >
        <a
          class="focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive inline-flex shrink-0 cursor-pointer items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:cursor-default disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-background hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 border shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 w-fit"
          data-slot="button"
          href="/ai"
        >
          <svg
            class="lucide lucide-message-square-code h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 7.5 8 10l2 2.5"
            />
            <path
              d="m14 7.5 2 2.5-2 2.5"
            />
            <path
              d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
            />
          </svg>
          Use AI
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
